content/docs/0.8.x/reference/cli/commands/keptn_get_stage.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn get stage"
slug: keptn_get_stage
---
## keptn get stage

Get details of a stage

### Synopsis

Get all stages or details of a stage from a given Keptn project

```
keptn get stage [flags]
```

### Examples

```
keptn get stages --project=sockshop
NAME           CREATION DATE                 
staging        2020-04-06T14:37:45.210Z
production     2020-04-06T14:37:45.210Z

keptn get stage staging --project sockshop
NAME           CREATION DATE                 
staging        2020-04-06T14:37:45.210Z

```

### Options

```
  -h, --help             help for stage
      --project string   keptn project name
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service

###### Auto generated by spf13/cobra on 19-Nov-2020
